--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>محفظة أنس الشعبي - مطور واجهات أمامية</title>
+  <title>anas al-shaabe</title>
   <meta name="description" content="محفظة أنس الشعبي - مطور واجهات أمامية متخصص في React، HTML، CSS، Bootstrap، PHP، و MySQL">
   <meta name="keywords" content="مطور ويب، React، HTML، CSS، Bootstrap، PHP، MySQL، محفظة">
   <!-- Google Fonts: Poppins -->
